--- a/src/alternate/uic-project.service
+++ b/src/alternate/uic-project.service
@@ -8,6 +8,7 @@ User=arkapravo
 Group=arkapravo
 WorkingDirectory=/home/arkapravo/UIC-Project/src/alternate
 ExecStart=/bin/python3 /home/arkapravo/UIC-Project/src/alternate/main.py
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
