--- a/src/server/uic-project-ard.service
+++ b/src/server/uic-project-ard.service
@@ -8,6 +8,7 @@ User=arkapravo
 Group=arkapravo
 WorkingDirectory=/home/arkapravo/UIC-Project/src/server
 ExecStart=/bin/python3 /home/arkapravo/UIC-Project/src/server/main.py
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
